--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,1 @@
-body{
-    margin:0%;
-    background-color: #212529;
-}
+/* You can add global styles to this file, and also import other style files */
