componente educacion completo, nada es responsive todavia

--- a/src/app/components/educacion/educacion.component.css
+++ b/src/app/components/educacion/educacion.component.css
@@ -5,25 +5,20 @@
     color:aliceblue;
 }
 .titulo{
+    margin-top: 50px;
     display: flex;
     justify-content: space-between;
 }
-.titulo-h1{
-    display: flex;
-    margin: 35px;
+h1{
+    margin-left: 35px;
 }
 .btn{
-    display: flex;
-    height: 40px;
-    margin-top: 50px;
     margin-right: 50px;
     color: black;
 }
-
-img {
+img{
     width: 300px;
 }
-
 ul {
     list-style: none;
 }
