--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,3 +8,4 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <app-header></app-header>
 <app-experiencia></app-experiencia>
+<app-educacion></app-educacion>
